Se revisan cambios

--- a/index.html
+++ b/index.html
@@ -6,9 +6,33 @@
     <title>Aluminio Zaragoza</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <header>Esta es una prueba de commit</header>
+    <header>
+        <img src="assets/imgs/logoVertical.png" alt="">
+        
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">Inicio</a>
+                        <a href="">Productos</a>
+                        <a href="">Nosotros</a>
+                        <a href="">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
+        <div class="header--info-container">
+            <div class="header--title-container">
+                <h1>Comercialización de aluminio, linea nacional y linea española</h1>
+                <p>Lideres en comercialización de perfiles de aluminio, herraje, vidrio, plasticos,con un extenso catálogo de productos.</p>
+                <a href=" " class="header--button"><span>i</span> Contacto</a>
+            </div>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
