Se modifica el heroe

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
         </div>
         <div class="header--info-container">
             <div class="header--title-container">
-                <h1>Comercialización de aluminio, linea nacional y linea española</h1>
+                <h1>Comercialización de aluminio </h1>
                 <p>Lideres en comercialización de perfiles de aluminio, herraje, vidrio, plasticos,con un extenso catálogo de productos.</p>
-                <a href=" " class="header--button"><span>i</span> Contacto</a>
+                <a href="#" class="header--button"> Contacto 
+                    <!-- <span></span> -->
+                 </a> 
             </div>
+            
         </div>
     </header>
     <main>
