Modiciacion de css comentarios

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Aluminio Zaragoza</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
+    {% comment %} <link rel="stylesheet" href="./css/index.css"> {% endcomment %}
 </head>
 <body>
     <header>
@@ -123,6 +123,8 @@
                     <div class="des-products">
                         <h3>Maquinaria</h3>                     
                         <p>Lorem</p>
+
+                        
                     </div>
                     
                 </div> 
@@ -141,8 +143,21 @@
             </div>
         </section>
 
-        <section>
-            prueba esta
+        <section class="main-product-detail">
+            <span class="product-detail--zaragoza-logo"></span>
+            <div class="product-detail--title">
+                <h2>Ofrecemos productos sin comparacion</h2>
+                <p>confiables y diseñados para su uso diario </p>
+                <section class="product-cards--container">
+                    <article class="product-detail--card">
+                        <span class="quality">  </span>
+                        <p class="product--card-title">Calidad</p>
+                        <p class="product--card-body">establecemos la satisfacción del cliente como el principio de acción básico de nuestra</p>
+                    </article>
+                </section>
+            </div>
+
+
         </section>
         <section></section>
     </main>
